<resources>
    <string name="app_name">IGNITE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="interests">Interests</string>
    <string name="netflix">Netflix</string>
    <string name="sports">Sports</string>
    <string name="music">Music</string>
    <string name="gym">Gym</string>
    <string name="match_filter">Match filter</string>
    <string name="art">Art</string>
    <string name="travel">Travel</string>
    <string name="meditation">Meditation</string>
    <string name="socializing">socializing</string>
    <string name="cars">Cars</string>
    <string name="foodie">Foodie</string>
    <string name="animals">Animals</string>
    <string name="yoga">Yoga</string>
    <string name="county">Counties</string>
    <string name="save_button">save button</string>
    <string name="back_button">back button</string>
    <string name="profile_edit_button">profile edit button</string>
    <string name="imageplaceholder">imageplaceholder</string>
    <string name="scroll_view_options">scroll view options</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_pager">view Pager</string>
    <string name="tab_layout">tab Layout</string>
    <string name="profileToolBarTxt">Profile</string>
    <string name="editProfileToolbarTxt">Edit Profile</string>
    <string name="search_pop_title">Search</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Ignite@gmail.com</string>
    <string name="last_updated">21/04/2023</string>
    <string name="privacyPolicyHeader">Privacy policy</string>
    <string name="privacyPolicy"><![CDATA[
    Privacy Policy
Last Updated: %1s
\n
\n
Information Collection\n
We may collect various types of information from users of our dating app, including but not limited to:\n
Personal information such as name, email address, and phone number
Profile information such as gender, age, location, and interests
User-generated content such as profile pictures, messages, and comments
Usage data such as app usage statistics, device information, and log files\n
\n
Information Use\n
We may use the collected information for the following purposes:\n
Providing and improving our dating app, including personalized features and recommendations
Communicating with users, such as responding to inquiries and sending notifications
Enforcing our terms of service and preventing fraud, abuse, and other illegal activities
Conducting research and analysis to improve user experience and understand user preferences\n
\n
Information Sharing\n
We may share the collected information with the following parties:\n
Service providers and partners who assist us in operating our dating app
Other users of our dating app, such as when users interact with each other
Law enforcement agencies, government officials, or legal entities in response to legal requests
Third parties in connection with a business transaction, such as a merger or acquisition
\n
Data Security\n
We take reasonable measures to protect the information collected from our users from unauthorized access, loss, or disclosure. However, please note that no method of transmission over the internet or method of electronic storage is 100% secure.\n
\n
Third-Party Links and Ads\n
Our dating app may contain links to third-party websites or advertisements from third-party advertisers. We are not responsible for the privacy practices or content of these third-party websites or advertisers. Users should review the privacy policies of these third parties before providing any personal information.
\n
\n
Children\'s Privacy\n
Our dating app is not intended for users under the age of 18. We do not knowingly collect personal information from children. If we become aware that we have collected personal information from a child without parental consent, we will take steps to delete the information as soon as possible.
\n
\n
Changes to Privacy Policy\n
We reserve the right to update or modify this privacy policy at any time without prior notice. Users are encouraged to review this privacy policy periodically for any changes.
\n
\n
Contact Us\n
If you have any questions or concerns about our privacy policy, please contact us at [ %2s].
]]></string>
    <string name="signUpInstructionHeader">Sign up/Sign in instructions</string>
    <string name="signUpInstruction"><![CDATA[

Sign-up Instruction:\n
\n
1. Visit the dating site\'s homepage.\n
\n
2. Click on the \"Sign Up\" or \"Register\" button to start the registration process.\n
\n
3. Provide your basic information, such as your name, age, gender, and email address.\n
\n
4. Choose a unique username and password for your account.\n
\n
5. Complete your profile by adding a profile picture and providing additional details about yourself, such as your interests, hobbies, and relationship preferences.\n
\n
6. Review and accept the terms of service and privacy policy.\n
\n
7. Complete any additional steps, such as email verification or phone number verification, if required.\n
\n
8. Customize your privacy settings to control what information you want to share with other users.\n
\n
9. Explore the dating site\'s features, such as searching for other users, sending messages, and updating your profile.\n
\n
10. Start connecting with other users and enjoy using the dating site to find potential matches!\n
\n
Sign-in Instruction\n
\n
1. Go to the dating site\'s homepage.\n
\n
2. Click on the "Sign In" or "Log In" button.\n
\n
3. Enter your registered email address or username and password.\n
\n
4. Click on the \"Sign In\" or \"Log In\" button to access your account.\n
\n
5. Optionally, you may need to complete additional security steps, such as solving a CAPTCHA or entering a verification code, if prompted.\n
\n
6. Once signed in, you can access your profile, search for other users, send messages, and use other features of the dating site to connect with potential matches.\n

]]></string>
<string name="refundPolicyHeader">Refund Policy</string>
    <string name="refundPolicy"><![CDATA[
Last Updated: [%1s]\n
\n
1. Refund Eligibility\n
We do not offer refunds for any purchases made within the app, including but not limited to premium subscriptions, virtual currency, or in-app purchases. All purchases are final and non-refundable.
\n
2. Cancellation of Subscription\n
If you have subscribed to a premium subscription plan, you may cancel your subscription at any time through the app store or platform where you made the purchase. Please note that cancelling your subscription will not entitle you to a refund for any unused portion of the subscription period.
\n
3. Disputed Charges\n
If you believe that you have been charged in error or have unauthorized charges, please contact our customer support at [CONTACT EMAIL] within [NUMBER] days of the charge. We will investigate the issue and work with you to resolve it as soon as possible.
\n
4. Changes to Refund Policy\n
We reserve the right to update or modify this refund policy at any time without prior notice. Users are encouraged to review this refund policy periodically for any changes.
\n
5. Contact Us\n
If you have any questions or concerns about our refund policy, please contact us at [%2s].
]]></string>
    <string name="termsOfServiceHeader">Terms of Service</string>
    <string name="termsOfService"><![CDATA[

Welcome to our dating app! By using our app, you agree to comply with and be bound by the following terms and conditions:\n
\n
1. Age Requirement\n
You must be at least 18 years old to use our dating app. By creating an account or using our services, you represent and warrant that you are at least 18 years old.\n
\n
2. User Conduct\n
You agree to use our dating app in a responsible and lawful manner. You will not use our app for any illegal, harmful, or unauthorized purpose. You will not impersonate others, harass or stalk other users, post offensive or inappropriate content, or engage in any activity that violates the rights of others.\n
\n
3. Account Creation and Security\n
You are responsible for maintaining the confidentiality and security of your account credentials. You will not share your account information with others, and you will promptly notify us of any unauthorized use or breach of security.\n
\n
4. Content Ownership\n
You retain ownership of the content you create and post on our dating app. However, by using our services, you grant us a non-exclusive, worldwide, royalty-free, sublicensable, and transferable license to use, reproduce, modify, publish, display, and distribute your content for the purpose of operating and promoting our app.\n
\n
5. Privacy Policy\n
By using our dating app, you acknowledge and agree to our privacy policy, which governs the collection, use, and disclosure of your personal information.\n
\n
6. Disclaimers\n
Our dating app is provided "as is" and without any warranty or representation of any kind. We do not guarantee the accuracy, completeness, reliability, or availability of our app, and we disclaim all warranties, express or implied, including but not limited to warranties of merchantability, fitness for a particular purpose, and non-infringement.\n
\n
7. Limitation of Liability\n
We are not liable for any direct, indirect, incidental, consequential, or special damages arising out of or in connection with your use of our dating app. This includes but is not limited to damages for loss of profits, data, or goodwill, and any other losses or damages that may result from the use or inability to use our app.\n
\n
8. Modifications and Termination\n
We reserve the right to modify or terminate our dating app, its features, or these terms of service at any time without notice. You agree that we are not liable for any modification, suspension, or termination of our app or its features.\n
\n
9. Governing Law\n
These terms of service are governed by the laws of [Your Country/Region/State], without regard to its conflicts of laws principles.\n
\n
10. Contact Us\n
If you have any questions, comments, or concerns about our terms of service or our dating app, please contact us at [%2s].]]></string>
    <string name="communityGuidelinesHeader">Community Guidelines</string>
    <string name="basic_detail_s_title">Basic detail\'s</string>
    <string name="warning_on_personal_details_page">These fields can\'t be changed\' \n so please enter carefully!!!</string>
</resources>